--- a/family-blog/blog.html
+++ b/family-blog/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Family Stories</title>
+  <title>Mbah Md Kassim</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
