--- a/family-blog/tree.html
+++ b/family-blog/tree.html
@@ -5,23 +5,24 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Jupri Family Tree</h1>
+  <h1>Mohd Jupri</h1>
   <div class="tree">
     <ul>
       <li>
-        <span>Abu Jupri</span>
+        <span>Rohani</span>
         <ul>
           <li>
-            <span>Ali Jupri</span>
+            <span>Rashidah</span>
             <ul>
-              <li><span>Sulaiman Jupri</span></li>
-              <li><span>Khadijah Jupri</span></li>
+              <li><span>Lutfi Al-Hadi</span></li>
+              <li><span>Luqman Al-Hakim</span></li>
             </ul>
           </li>
           <li>
-            <span>Fatimah Jupri</span>
+            <span>Sulaiman</span>
             <ul>
-              <li><span>Amin Jupri</span></li>
+              <li><span>Muhammad</span></li>
+              <li><span>Maisarah</span></li>
             </ul>
           </li>
         </ul>
