--- a/family-blog/index.html
+++ b/family-blog/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jupri Family Blog</title>
+  <title>Md Kassim Family Blog</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to the Jupri Family Tree</h1>
+    <h1>Welcome to the Md Kassim Family Tree</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="tree.html">Family Tree</a>
@@ -14,7 +14,7 @@
     </nav>
   </header>
   <main>
-    <p>This site documents the Jupri family structure across generations.</p>
+    <p>This site documents the Md Kassim family structure across generations.</p>
   </main>
 </body>
 </html>
